# Ordivon

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml  mypy.ini  package.json  playwright.config.ts  playwright.release.config.ts  pnpm-lock.yaml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  delivery.yml  nightly-regression.yml  security.yml
.hermes/plans/: 2025-04-26_H8-review-closure-plan.md
.tmp/ordivon-verify-public-repo-dryrun/: README.md  ordivon_verify.py  pyproject.toml
.tmp/ordivon-verify-public-repo-dryrun/docs/: adoption.md  ci.md  pr-comments.md  quickstart.md
.tmp/ordivon-verify-public-repo-dryrun/examples/: github-action.yml.example
.tmp/ordivon-verify-public-repo-dryrun/examples/quickstart/: README.md  ordivon.verify.json
.tmp/ordivon-verify-public-repo-dryrun/examples/quickstart/governance/: document-registry.jsonl  verification-gate-manifest.json
.tmp/ordivon-verify-public-repo-dryrun/examples/quickstart/receipts/: clean-receipt.md
.tmp/ordivon-verify-public-repo-dryrun/schemas/: README.md  ordivon.verify.schema.json
.tmp/ordivon-verify-public-repo-dryrun/skills/ordivon-verify/: SKILL.md
.tmp/ordivon-verify-public-repo-dryrun/src/ordivon_verify/: __init__.py  __main__.py  cli.py  config.py  report.py  runner.py
.tmp/ordivon-verify-public-repo-dryrun/src/ordivon_verify/checks/: debt.py  docs.py  gates.py  receipts.py
.tmp/ordivon-verify-public-repo-dryrun/src/ordivon_verify/schemas/: document-registry.schema.json  verification-debt-ledger.schema.json  verification-gate-manifest.schema.json
.tmp/ordivon-verify-public-repo-dryrun/tests/fixtures/clean_external/: ordivon.verify.json
.tmp/ordivon-verify-public-repo-dryrun/tests/fixtures/clean_external/receipts/: clean-receipt.md
.tmp/ordivon-verify-public-repo-dryrun/tests/fixtures/external_repo/receipts/: bad-receipt.md
.tmp/ordivon-verify-public-repo-dryrun/tests/fixtures/standard_external/: ordivon.verify.json
.tmp/ordivon-verify-public-repo-dryrun/tests/fixtures/standard_external/governance/: document-registry.jsonl  verification-debt-ledger.jsonl  verification-gate-manifest.json
.tmp/ordivon-verify-public-repo-dryrun/tests/fixtures/standard_external/receipts/: clean-receipt.md
.tmp/ordivon-verify-public-repo-dryrun/tests/unit/: test_quickstart_example.py
adapters/finance/: __init__.py  health.py
alembic/versions/: d3eb52144b33_describe_change.py
apps/: README.md
apps/api/: README.md  pyproject.toml
apps/api/app/: README.md  main.py
apps/api/app/api/: README.md
apps/api/app/api/v1/: README.md  analyze.py  audits.py  evals.py  finance_decisions.py  health.py  knowledge.py  recommendations.py  reports.py  reviews.py  router.py  validation.py
apps/api/app/core/: README.md  config.py  db.py
apps/api/app/integrations/: README.md
apps/api/app/models/: README.md
apps/api/app/policies/: README.md
apps/api/app/repositories/: README.md
apps/api/app/routers/: README.md  health.py  reviews.py
apps/api/app/schemas/: README.md  audit.py  common.py  eval.py  finance_decisions.py  health.py  knowledge.py  recommendation.py  requests.py  responses.py  review.py  reviews.py  validation.py
apps/api/app/services/: README.md  object_service.py  recommendation_service.py  review_service.py  validation_service.py
apps/api/app/skills/: README.md
apps/api/app/utils/: README.md  crypto.py
apps/api/app/workflows/: README.md
apps/data/: README.md
apps/db/: README.md
apps/web/: README.md  package-lock.json  package.json  tsconfig.json
capabilities/: README.md
capabilities/contracts/: README.md  view.py  workflow.py
capabilities/diagnostic/: README.md
capabilities/domain/: README.md  finance_decisions.py  finance_outcome.py
capabilities/view/: README.md  audits.py
capabilities/workflow/: README.md  reviews.py
docs/: PFIOS_MASTER_MANUAL.md  context_design.md  naming.md  prompt_tuning_notes.md  reasoning_contract.md
docs/adr/: ADR-008-tooling-adoption-strategy.md
docs/ai/: README.md  agent-output-contract.md  agent-working-rules.md  architecture-file-map.md  current-phase-boundaries.md  new-ai-collaborator-guide.md  ordivon-root-context.md  task-prompt-template.md
docs/architecture/: README.md  aegisos-design-doctrine.md  aegisos-extraction-workspace-refinement-2026-04-22.md  aegisos-post-serial-batch-refinement-2026-04-22.md  api-bypass-inventory.md  architecture-baseline.md  architecture-diagram.md  boundary-map.md  design_spec_v0_1.md  (+43 more)
domains/: README.md
evals/: coding_cases.json  cross_pack_cases.json  finance_cases.json  run_evals.py
execution/: README.md
governance/: README.md
infra/: README.md
intelligence/: README.md
knowledge/: README.md  extraction.py
knowledge_state/: README.md
orchestrator/: README.md
packs/: README.md
policies/: README.md  constitution.md  trading_limits.yaml
prompts/: README.md
scripts/: README.md  audit_runtime_evidence_db.py  check_architecture.py  check_document_registry.py  check_dogfood_evidence.py  check_openapi_snapshot.py  check_paper_dogfood_ledger.py  check_receipt_integrity.py  check_redis.py  check_runtime_evidence.py  check_state_truth.py  check_verification_debt.py  check_verification_manifest.py  compare_eval_runs.py  detect_agentic_patterns.py  dryrun_ordivon_verify_public_repo.py  eval_reasoning_quality.py  generate_document_wiki.py  h9_dogfood_runs.py  h9c_verification.py  h9f_coding_dogfood.py  ordivon_verify.py  prepare_ordivon_verify_package_context.py  repo_governance_cli.py  repo_governance_github_adapter.py  run_cross_pack_dogfood.py  run_db_migration.py  run_first_paper_trade.py  run_reasoning_regression.py  run_verification_baseline.py  seed_mvp_e2e.py  smoke_ordivon_verify_private_install.py  smoke_ordivon_verify_wheel_install.py  smoke_test_api_v1.py  smoke_test_data_layer.py  smoke_test_full_loop.py  smoke_test_orchestrator.py  smoke_test_phase5.py  smoke_test_reasoning_bridge.py  smoke_test_report_builder.py  (+2 more)
shared/: README.md
state/: README.md
tests/: conftest.py
tools/: README.md
workflows/: README.md
(+621 files in other folders)
