[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ordivon-verify"
version = "0.1.0"
description = "Ordivon Verify — AI work verification CLI (prototype)"
requires-python = ">=3.11"

[project.scripts]
ordivon-verify = "ordivon_verify.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
